--- a/directbak.yaml
+++ b/directbak.yaml
@@ -603,7 +603,6 @@ payload:
   - '+.0813fs.com'
   - '+.08172.hk'
   - '+.0817tv.com'
-  - '+.0817xm.com'
   - '+.0818tuan.com'
   - '+.0826j.com'
   - '+.082808.com'
@@ -2252,7 +2251,6 @@ payload:
   - '+.2300sjz.com'
   - '+.230596.com'
   - '+.230book.com'
-  - '+.230tm.com'
   - '+.231122.com'
   - '+.231327.com'
   - '+.2323u.com'
@@ -2894,6 +2892,7 @@ payload:
   - '+.35go.net'
   - '+.35hw.com'
   - '+.35inter.com'
+  - '+.35jk.com'
   - '+.35kds.com'
   - '+.35mei.com'
   - '+.35nic.com'
@@ -4084,7 +4083,6 @@ payload:
   - '+.51itstudy.com'
   - '+.51iwifi.com'
   - '+.51ixuejiao.com'
-  - '+.51jam.com'
   - '+.51jiabo.com'
   - '+.51jiameng.com'
   - '+.51jianxie.com'
@@ -4856,7 +4854,6 @@ payload:
   - '+.5648.cc'
   - '+.56506666.com'
   - '+.5654.com'
-  - '+.565880.com'
   - '+.566.com'
   - '+.566855.com'
   - '+.5669.com'
@@ -5663,6 +5660,7 @@ payload:
   - '+.6pifa.net'
   - '+.6plat.org'
   - '+.6puppy.xyz'
+  - '+.6r9.net'
   - '+.6renyou.com'
   - '+.6rooms.com'
   - '+.6s4qki.com'
@@ -6602,6 +6600,7 @@ payload:
   - '+.900php.com'
   - '+.900ppt.com'
   - '+.900top.com'
+  - '+.900yi.com'
   - '+.90123.com'
   - '+.90370.com'
   - '+.90432.net'
@@ -6831,7 +6830,6 @@ payload:
   - '+.91xy.com'
   - '+.91y.com'
   - '+.91yao.com'
-  - '+.91yian.com'
   - '+.91yinpin.com'
   - '+.91yixun.com'
   - '+.91yk.com'
@@ -8211,7 +8209,6 @@ payload:
   - '+.aips.me'
   - '+.aipuo.com'
   - '+.aipz.com'
-  - '+.aipz777.com'
   - '+.aiqianduan.com'
   - '+.aiqianxq.com'
   - '+.aiqin.com'
@@ -10168,7 +10165,6 @@ payload:
   - '+.bangongyi.com'
   - '+.bangongziyuan.com'
   - '+.bangqi66.com'
-  - '+.bangqiu.biz'
   - '+.bangqu.com'
   - '+.bangquan.net'
   - '+.bangrong.com'
@@ -12463,6 +12459,7 @@ payload:
   - '+.bytecdn.com'
   - '+.bytecdntp.com'
   - '+.byted-static.com'
+  - '+.byted-ug.com'
   - '+.byted.org'
   - '+.bytedance.com'
   - '+.bytedance.net'
@@ -16444,6 +16441,7 @@ payload:
   - '+.codooncdn.com'
   - '+.codrim.net'
   - '+.cofco.com'
+  - '+.cofcoko.com'
   - '+.cofcosp.com'
   - '+.cofeed.com'
   - '+.cofess.com'
@@ -19010,7 +19008,6 @@ payload:
   - '+.diyinews.com'
   - '+.diyishijian.com'
   - '+.diyitech.com'
-  - '+.diyiwl.wang'
   - '+.diyixiazai.com'
   - '+.diyixitong.com'
   - '+.diyiyou.com'
@@ -20824,6 +20821,7 @@ payload:
   - '+.effevo.com'
   - '+.efficient.hk'
   - '+.effirst.com'
+  - '+.efivestar.com'
   - '+.efly.cc'
   - '+.eflybird.com'
   - '+.eflycloud.com'
@@ -21250,6 +21248,7 @@ payload:
   - '+.eranet.com'
   - '+.ercc.cc'
   - '+.erdaicms.com'
+  - '+.erdangame.xyz'
   - '+.erdangjiade.com'
   - '+.erdianzhang.com'
   - '+.erdong.site'
@@ -22429,6 +22428,7 @@ payload:
   - '+.ffis.me'
   - '+.ffjd1.com'
   - '+.ffmarket.com'
+  - '+.ffmomola.com'
   - '+.ffmulu.com'
   - '+.ffpedia.com'
   - '+.ffpk-cdn.xyz'
@@ -23275,7 +23275,6 @@ payload:
   - '+.fview.com'
   - '+.fvti.com'
   - '+.fw-12365.com'
-  - '+.fw-biotech.com'
   - '+.fw4.co'
   - '+.fw4.me'
   - '+.fwcranes.com'
@@ -25101,7 +25100,6 @@ payload:
   - '+.guge.tw'
   - '+.gugeanzhuangqi.com'
   - '+.gugeapps.net'
-  - '+.gugexs.com'
   - '+.gugong.net'
   - '+.gugu5.com'
   - '+.gugud.com'
@@ -28507,7 +28505,6 @@ payload:
   - '+.hububbs.com'
   - '+.hubulab.com'
   - '+.hubwiz.com'
-  - '+.hubzs.com'
   - '+.hucdn.com'
   - '+.huceo.com'
   - '+.huchao.me'
@@ -28801,7 +28798,6 @@ payload:
   - '+.huolishaonianwang.com'
   - '+.huolug.com'
   - '+.huomao.com'
-  - '+.huomao.tv'
   - '+.huomaotv.com'
   - '+.huomaow.com'
   - '+.huomaqun.com'
@@ -29086,7 +29082,6 @@ payload:
   - '+.hyxrzs.com'
   - '+.hyyf.net'
   - '+.hyyoa.com'
-  - '+.hyyyny.com'
   - '+.hyz86.com'
   - '+.hyzcservice.com'
   - '+.hyzm.cc'
@@ -29907,7 +29902,6 @@ payload:
   - '+.igexin.com'
   - '+.igigo.net'
   - '+.igo180.com'
-  - '+.igo998.com'
   - '+.igome.com'
   - '+.igomkt.com'
   - '+.igooma.com'
@@ -30073,7 +30067,6 @@ payload:
   - '+.ijuhepay.com'
   - '+.ijunhai.com'
   - '+.ijunxun.com'
-  - '+.ijutou.net'
   - '+.ijuwu.com'
   - '+.ijzhang.com'
   - '+.ik123.com'
@@ -31133,6 +31126,7 @@ payload:
   - '+.ityouknow.com'
   - '+.itypen.com'
   - '+.ityuan.com'
+  - '+.ityun.tech'
   - '+.ityxb.com'
   - '+.itzcdn.com'
   - '+.itzh.org'
@@ -31352,7 +31346,6 @@ payload:
   - '+.izt6.com'
   - '+.izt8.com'
   - '+.iztwp.com'
-  - '+.iztyy.com'
   - '+.izuche.com'
   - '+.izuchecdn.com'
   - '+.izuiyou.com'
@@ -32675,6 +32668,7 @@ payload:
   - '+.jjhuigou.com'
   - '+.jjhuoyan.com'
   - '+.jjhyxh.com'
+  - '+.jjiayi.com'
   - '+.jjidc.com'
   - '+.jjiehao.com'
   - '+.jjinfo.com'
@@ -32925,6 +32919,7 @@ payload:
   - '+.johnardo.com'
   - '+.johnwatsondev.com'
   - '+.joiest.com'
+  - '+.joinchitchat.com'
   - '+.joindata.net'
   - '+.joinf.com'
   - '+.joiningss.com'
@@ -35603,7 +35598,6 @@ payload:
   - '+.laojiuxitong.com'
   - '+.laoke.com'
   - '+.laolai.com'
-  - '+.laolaosi.com'
   - '+.laoliang.net'
   - '+.laoliboke.com'
   - '+.laolieren.shop'
@@ -36585,6 +36579,7 @@ payload:
   - '+.linjin.net'
   - '+.linjunet.com'
   - '+.linjunlong.com'
+  - '+.linjuyihao.com'
   - '+.link27.com'
   - '+.link2lib.com'
   - '+.link2shops.com'
@@ -37174,7 +37169,6 @@ payload:
   - '+.lolyculture.net'
   - '+.lomoment.com'
   - '+.lomu.me'
-  - '+.lon3d.com'
   - '+.loncent.com'
   - '+.loncin.com'
   - '+.loncinindustries.com'
@@ -37903,7 +37897,6 @@ payload:
   - '+.lyrc.cc'
   - '+.lyric-robot.com'
   - '+.lyricsv.app'
-  - '+.lyshgk.com'
   - '+.lysk.net'
   - '+.lysqdx.com'
   - '+.lysqzs.com'
@@ -40647,6 +40640,7 @@ payload:
   - '+.n-mobile.com'
   - '+.n0808.com'
   - '+.n12345.com'
+  - '+.n12m.cc'
   - '+.n12xar123.xyz'
   - '+.n21.cc'
   - '+.n3ko.co'
@@ -44092,7 +44086,6 @@ payload:
   - '+.pz6682.com'
   - '+.pzds.com'
   - '+.pzhccb.com'
-  - '+.pzhht.com'
   - '+.pzjdimg.com'
   - '+.pzjiadian.com'
   - '+.pzlink.com'
@@ -45562,6 +45555,7 @@ payload:
   - '+.qwpo2018.com'
   - '+.qwpr38.com'
   - '+.qwq.moe'
+  - '+.qwq.ren'
   - '+.qwqk.net'
   - '+.qwqoffice.com'
   - '+.qwspcz.com'
@@ -45578,7 +45572,6 @@ payload:
   - '+.qxbx.com'
   - '+.qxcdn.cc'
   - '+.qxcu.com'
-  - '+.qxghost.com'
   - '+.qxiu.com'
   - '+.qxka.com'
   - '+.qxkp.net'
@@ -46406,6 +46399,7 @@ payload:
   - '+.rrr.me'
   - '+.rrrdai.com'
   - '+.rrrhteam.com'
+  - '+.rrrmj.com'
   - '+.rrrrdaimao.com'
   - '+.rrs.com'
   - '+.rrscdn.com'
@@ -49980,6 +49974,7 @@ payload:
   - '+.sslibrary.com'
   - '+.sslnode.com'
   - '+.ssmec.com'
+  - '+.ssmeow.com'
   - '+.ssmh72.com'
   - '+.ssmoit.com'
   - '+.ssnewyork.com'
@@ -50106,7 +50101,6 @@ payload:
   - '+.steelsearcher.com'
   - '+.stefg.org'
   - '+.stepfpga.com'
-  - '+.stevenshi.me'
   - '+.stfile.com'
   - '+.stg8.com'
   - '+.stgairasia.com'
@@ -51203,7 +51197,6 @@ payload:
   - '+.tairan.com'
   - '+.taisantech.com'
   - '+.taishangshiwu.com'
-  - '+.taishenghb.com'
   - '+.taishengtoys.com'
   - '+.taitaikg.com'
   - '+.taiwandao.tw'
@@ -51271,6 +51264,7 @@ payload:
   - '+.tangdou.com'
   - '+.tangdouimg.com'
   - '+.tangeche.com'
+  - '+.tangentessays.com'
   - '+.tanggu11g.com'
   - '+.tangguoxian.com'
   - '+.tanghushi.com'
@@ -52867,7 +52861,6 @@ payload:
   - '+.tradew.com'
   - '+.tradow.com'
   - '+.tradplusad.com'
-  - '+.tradyau.com'
   - '+.traineexp.com'
   - '+.trainingipv6.com'
   - '+.trait-wholesale.com'
@@ -57531,6 +57524,7 @@ payload:
   - '+.wuliapi.com'
   - '+.wulicdn.com'
   - '+.wuligeigei.com'
+  - '+.wuling.com'
   - '+.wuliujia2018.com'
   - '+.wulong365.com'
   - '+.wulvxing.com'
@@ -58091,6 +58085,7 @@ payload:
   - '+.xcpapa.xyz'
   - '+.xcqxcq.com'
   - '+.xcrxykl.com'
+  - '+.xcsfcjyw.com'
   - '+.xcshaifen.com'
   - '+.xcstuido.com'
   - '+.xcsyxx.net'
@@ -60297,6 +60292,7 @@ payload:
   - '+.xxyfgy.com'
   - '+.xxyhzd.com'
   - '+.xxyo.com'
+  - '+.xxysvip.com'
   - '+.xxyw.com'
   - '+.xxzdpf.com'
   - '+.xxzfgjj.com'
@@ -62481,7 +62477,6 @@ payload:
   - '+.ysepay.com'
   - '+.ysext.com'
   - '+.ysfog.com'
-  - '+.ysgc.tv'
   - '+.ysgtg.com'
   - '+.ysgushi.com'
   - '+.yshp.net'
@@ -63127,7 +63122,6 @@ payload:
   - '+.yuyicai.com'
   - '+.yuyin.tv'
   - '+.yuyu.com'
-  - '+.yuyuangewh.com'
   - '+.yuyue111.com'
   - '+.yuyuema.com'
   - '+.yuyueshop.com'
@@ -63959,7 +63953,6 @@ payload:
   - '+.zgzwl.com'
   - '+.zgzy.net'
   - '+.zgzyqccj.com'
-  - '+.zgzyqcgw.com'
   - '+.zgzzs.com'
   - '+.zh-itone.com'
   - '+.zh.cc'
@@ -64906,7 +64899,6 @@ payload:
   - '+.zhust.com'
   - '+.zhutao.com'
   - '+.zhuti.com'
-  - '+.zhuticlub.com'
   - '+.zhutihome.net'
   - '+.zhutix.com'
   - '+.zhutix.net'
@@ -64989,7 +64981,6 @@ payload:
   - '+.zihai0535.com'
   - '+.zihai0591.com'
   - '+.zihai0595.com'
-  - '+.zihai0755.com'
   - '+.zihai24.com'
   - '+.zihexin.net'
   - '+.zihu.com'
