--- a/directbak.yaml
+++ b/directbak.yaml
@@ -379,7 +379,6 @@ payload:
   - '+.053135.com'
   - '+.0531jb.com'
   - '+.0531soso.com'
-  - '+.0531welt.com'
   - '+.0531wt.com'
   - '+.0532.com'
   - '+.0533.com'
@@ -717,6 +716,7 @@ payload:
   - '+.1000.com'
   - '+.10000.com'
   - '+.10000.sh'
+  - '+.10000gd.tech'
   - '+.10000idc.net'
   - '+.10000job.com'
   - '+.10000link.com'
@@ -943,7 +943,6 @@ payload:
   - '+.112wan.com'
   - '+.1131.cc'
   - '+.11315.com'
-  - '+.1133.cc'
   - '+.113989.com'
   - '+.113dh.com'
   - '+.113ya.com'
@@ -2096,11 +2095,7 @@ payload:
   - '+.217.net'
   - '+.217play.com'
   - '+.217wo.com'
-  - '+.218257.com'
   - '+.218318.com'
-  - '+.218573.com'
-  - '+.218574.com'
-  - '+.218953.com'
   - '+.218996.com'
   - '+.2197079.com'
   - '+.21bcr.com'
@@ -3171,17 +3166,12 @@ payload:
   - '+.3727.cc'
   - '+.37274.com'
   - '+.373.com'
-  - '+.373135.com'
   - '+.373258.com'
-  - '+.373294.com'
   - '+.3733.com'
-  - '+.373391.com'
   - '+.3737.com'
   - '+.3737g.com'
   - '+.3737k.com'
   - '+.3737tyc.com'
-  - '+.373820.com'
-  - '+.373978.com'
   - '+.373best.com'
   - '+.373f.com'
   - '+.373house.com'
@@ -3276,7 +3266,6 @@ payload:
   - '+.39kf.com'
   - '+.39kx.com'
   - '+.39meitu.com'
-  - '+.39mo.com'
   - '+.39shubao.com'
   - '+.39sk.com'
   - '+.39txt.com'
@@ -5783,7 +5772,6 @@ payload:
   - '+.72dj.com'
   - '+.72dns.com'
   - '+.72dns.net'
-  - '+.72dy.com'
   - '+.72e.net'
   - '+.72en.com'
   - '+.72g.com'
@@ -6901,7 +6889,6 @@ payload:
   - '+.92you.com'
   - '+.9312.net'
   - '+.933.moe'
-  - '+.93338c.cc'
   - '+.934dsw.com'
   - '+.9355.com'
   - '+.93636.com'
@@ -7062,6 +7049,7 @@ payload:
   - '+.96369.net'
   - '+.9637.com'
   - '+.963999.com'
+  - '+.96459.com'
   - '+.964yx.com'
   - '+.96516.net'
   - '+.96520.com'
@@ -8646,6 +8634,7 @@ payload:
   - '+.allcitysz.net'
   - '+.alldk.com'
   - '+.alldobetter.com'
+  - '+.alldragon.com'
   - '+.alleadprint.com'
   - '+.allfang.com'
   - '+.allfunnies.com'
@@ -8923,7 +8912,6 @@ payload:
   - '+.ansbabe.com'
   - '+.ansgo.com'
   - '+.anshi7.com'
-  - '+.anshouji.com'
   - '+.ansiding.com'
   - '+.ansky.com'
   - '+.ansteelgroup.com'
@@ -10823,7 +10811,6 @@ payload:
   - '+.bestinwo.com'
   - '+.bestjy.net'
   - '+.bestlee.net'
-  - '+.bestmephoto.com'
   - '+.bestopview.com'
   - '+.bestpay.net'
   - '+.bestpeng.com'
@@ -11037,7 +11024,6 @@ payload:
   - '+.bigecko.com'
   - '+.bigehudong.com'
   - '+.bigemao.com'
-  - '+.bigengculture.com'
   - '+.bigeniao.com'
   - '+.bigerdata.com'
   - '+.bigertech.com'
@@ -11704,7 +11690,6 @@ payload:
   - '+.blinkol.com'
   - '+.blissmall.net'
   - '+.blizzardcn.com'
-  - '+.blkkj.com'
   - '+.bln7.com'
   - '+.bln8.com'
   - '+.block288.com'
@@ -12071,10 +12056,8 @@ payload:
   - '+.bqatj.com'
   - '+.bqfy.com'
   - '+.bqg26.com'
-  - '+.bqg5.cc'
   - '+.bqg8.cc'
   - '+.bqg8.la'
-  - '+.bqgwu.com'
   - '+.bqgyy.com'
   - '+.bqiapp.com'
   - '+.bqimg.com'
@@ -12546,6 +12529,7 @@ payload:
   - '+.c-lion.com'
   - '+.c-lodop.com'
   - '+.c-ps.net'
+  - '+.c-rst.com'
   - '+.c-sky.com'
   - '+.c-sz.com'
   - '+.c-t.work'
@@ -15785,7 +15769,6 @@ payload:
   - '+.cname-cdn.com'
   - '+.cname123.net'
   - '+.cnamegslb.com'
-  - '+.cnantennas.com'
   - '+.cnanzhi.com'
   - '+.cnaomeng.com'
   - '+.cnautofinance.com'
@@ -16609,6 +16592,7 @@ payload:
   - '+.coolook.org'
   - '+.coolool.com'
   - '+.coolpad.com'
+  - '+.coolpad.store'
   - '+.coolqi.com'
   - '+.coolrar.com'
   - '+.coolsc.net'
@@ -17062,6 +17046,7 @@ payload:
   - '+.csgocn.net'
   - '+.csgokai.com'
   - '+.csgpc.org'
+  - '+.csguan.com'
   - '+.csgwbn.com'
   - '+.csharpkit.com'
   - '+.cshixi.com'
@@ -19210,7 +19195,6 @@ payload:
   - '+.dn8188.com'
   - '+.dnbbn.com'
   - '+.dnbbs.com'
-  - '+.dnbcw.info'
   - '+.dnbiz.com'
   - '+.dncheng.com'
   - '+.dndci.com'
@@ -21373,6 +21357,7 @@ payload:
   - '+.esztsg.org'
   - '+.esztyg.com'
   - '+.eszwdx.com'
+  - '+.eszyb.com'
   - '+.et59.com'
   - '+.etao.com'
   - '+.etaog.com'
@@ -22916,6 +22901,7 @@ payload:
   - '+.fosunholiday.com'
   - '+.fotao.name'
   - '+.fotao9.com'
+  - '+.fotile.com'
   - '+.fotileglobal.com'
   - '+.fotilestyle.com'
   - '+.foto8.net'
@@ -24656,6 +24642,7 @@ payload:
   - '+.goofish.com'
   - '+.googlebridge.com'
   - '+.googlefonts.net'
+  - '+.googlenav.com'
   - '+.googlevip8.com'
   - '+.googlevoice.org'
   - '+.googleyixia.com'
@@ -25295,7 +25282,6 @@ payload:
   - '+.guwenxs.com'
   - '+.guwu121.com'
   - '+.guxunw.com'
-  - '+.guyouzhan.com'
   - '+.guyuenglish.com'
   - '+.guyungame.com'
   - '+.guzaosf.com'
@@ -27101,7 +27087,6 @@ payload:
   - '+.hgbang.com'
   - '+.hgcyh.com'
   - '+.hgdgcxy.com'
-  - '+.hgfdcscxx.com'
   - '+.hgfdrf.com'
   - '+.hghhh.com'
   - '+.hgimage.com'
@@ -27616,6 +27601,7 @@ payload:
   - '+.hnrcsc.net'
   - '+.hnrich.net'
   - '+.hnrmb.com'
+  - '+.hnsdzjy.com'
   - '+.hnsfdc.com'
   - '+.hnshengben.com'
   - '+.hnsimeng.com'
@@ -28090,6 +28076,7 @@ payload:
   - '+.hsgsy.com'
   - '+.hshotel.com'
   - '+.hshs.com'
+  - '+.hshsjy.com'
   - '+.hshton.com'
   - '+.hshuiyi.com'
   - '+.hshw.com'
@@ -28463,6 +28450,7 @@ payload:
   - '+.huaxiaci.com'
   - '+.huaxiaf.com'
   - '+.huaxiangdiao.com'
+  - '+.huaxiao5.com'
   - '+.huaxiaobaokeji.com'
   - '+.huaxiazi.com'
   - '+.huaxincem.com'
@@ -28679,6 +28667,7 @@ payload:
   - '+.huiyep.com'
   - '+.huiyi8.com'
   - '+.huiyiabc.com'
+  - '+.huiyijh.com'
   - '+.huiyinxun.com'
   - '+.huiyisheji.com'
   - '+.huiyizhuo.com'
@@ -29207,6 +29196,7 @@ payload:
   - '+.hzti.com'
   - '+.hztosz.com'
   - '+.hztraining.com'
+  - '+.hztygd.com'
   - '+.hzvillas.com'
   - '+.hzwer.com'
   - '+.hzwindpower.com'
@@ -29552,6 +29542,7 @@ payload:
   - '+.ickimg.com'
   - '+.iclicash.com'
   - '+.iclickstatic.com'
+  - '+.icloudcity.com'
   - '+.icloudgslb.com'
   - '+.icloudnews.net'
   - '+.iclouds.work'
@@ -31489,6 +31480,7 @@ payload:
   - '+.jc35.com'
   - '+.jc56.com'
   - '+.jc85.com'
+  - '+.jcbjbcak.com'
   - '+.jccsoc.com'
   - '+.jccug.com'
   - '+.jcedu.org'
@@ -33636,7 +33628,6 @@ payload:
   - '+.jxetv.com'
   - '+.jxexpressway.com'
   - '+.jxf57.com'
-  - '+.jxf75.com'
   - '+.jxg1.com'
   - '+.jxgdw.com'
   - '+.jxggcm.com'
@@ -34682,6 +34673,7 @@ payload:
   - '+.knowhow-china.com'
   - '+.knowingclouds.com'
   - '+.knowingcloudvip.com'
+  - '+.knowingyun.com'
   - '+.knowncoin.com'
   - '+.knownpcb.com'
   - '+.knownsec.com'
@@ -35652,7 +35644,6 @@ payload:
   - '+.laoxuehost.net'
   - '+.laoxuezhuji.com'
   - '+.laoy.net'
-  - '+.laoyacname.com'
   - '+.laoyaoba.com'
   - '+.laoyoujiaju.com'
   - '+.laoyouzhibo.com'
@@ -35741,6 +35732,7 @@ payload:
   - '+.lbkrs.com'
   - '+.lbl520.com'
   - '+.lboyue.com'
+  - '+.lbsmshop.com'
   - '+.lbwbw.com'
   - '+.lbx777.com'
   - '+.lbxcn.com'
@@ -35989,7 +35981,6 @@ payload:
   - '+.leletv.net'
   - '+.lelevod.com'
   - '+.lelewl.com'
-  - '+.lelittlesaigon.com'
   - '+.lemai.com'
   - '+.lemaker.com'
   - '+.lemall.com'
@@ -36222,7 +36213,6 @@ payload:
   - '+.lhs11.com'
   - '+.lhsdad.com'
   - '+.lhsoso.com'
-  - '+.lhsz.xyz'
   - '+.lhtjyy.com'
   - '+.lhwill.com'
   - '+.lhwytj.com'
@@ -37001,6 +36991,7 @@ payload:
   - '+.lkme.cc'
   - '+.lkong.com'
   - '+.lkong.net'
+  - '+.lkszj.info'
   - '+.lkxianglong.net'
   - '+.lkyou.com'
   - '+.ll-hao123.com'
@@ -37724,7 +37715,6 @@ payload:
   - '+.luyanghui.com'
   - '+.luyewooden.com'
   - '+.luyinla.com'
-  - '+.luyouqi.biz'
   - '+.luyouqi.com'
   - '+.luyouwang.com'
   - '+.luyouwang.net'
@@ -40278,7 +40268,6 @@ payload:
   - '+.mutualhunter.com'
   - '+.mutuoluo.com'
   - '+.muwai.com'
-  - '+.muwuya.com'
   - '+.mux5.com'
   - '+.muxin.fun'
   - '+.muxiulin.com'
@@ -40325,6 +40314,7 @@ payload:
   - '+.mx175.com'
   - '+.mx3g.com'
   - '+.mxarts.com'
+  - '+.mxbc.com'
   - '+.mxchip.com'
   - '+.mxddp.com'
   - '+.mxde.com'
@@ -41207,6 +41197,7 @@ payload:
   - '+.nhzj.com'
   - '+.nhzs.com'
   - '+.ni8.com'
+  - '+.ni93.com'
   - '+.nianbin.com'
   - '+.nianw.com'
   - '+.nianzhi.cc'
@@ -42675,7 +42666,6 @@ payload:
   - '+.paipianbang.com'
   - '+.paiqy.com'
   - '+.pairmb.com'
-  - '+.paisen.site'
   - '+.paishanglai.net'
   - '+.paishi.com'
   - '+.paiwo.co'
@@ -45027,7 +45017,6 @@ payload:
   - '+.qll-times.com'
   - '+.qlmoney.com'
   - '+.qlotc.net'
-  - '+.qlpe8.com'
   - '+.qlpw.net'
   - '+.qlrc.com'
   - '+.qls.fun'
@@ -45271,6 +45260,7 @@ payload:
   - '+.qseeking.com'
   - '+.qsfcw.com'
   - '+.qshang.com'
+  - '+.qskretkf.com'
   - '+.qspfw.com'
   - '+.qspfwadmin.com'
   - '+.qss-lb.com'
@@ -45470,6 +45460,7 @@ payload:
   - '+.qukuba.com'
   - '+.qulishi.com'
   - '+.qulv.com'
+  - '+.qumaihuishou.com'
   - '+.qumaishu.com'
   - '+.qumaiyao.com'
   - '+.qumifeng.com'
@@ -45724,6 +45715,7 @@ payload:
   - '+.r2g.net'
   - '+.r2yx.com'
   - '+.r337iz6.com'
+  - '+.r369.com'
   - '+.r51.net'
   - '+.r5k.com'
   - '+.r5tao.com'
@@ -45957,6 +45949,7 @@ payload:
   - '+.rednetdns.com'
   - '+.redocn.com'
   - '+.redoop.com'
+  - '+.redoufu.com'
   - '+.redpact.com'
   - '+.redphon.com'
   - '+.redream.com'
@@ -47602,6 +47595,7 @@ payload:
   - '+.sh-ekeyboard.org'
   - '+.sh-henian.com'
   - '+.sh-hilead.com'
+  - '+.sh-holfer.com'
   - '+.sh-holiday.com'
   - '+.sh-huifeng.com'
   - '+.sh-hywin.com'
@@ -48064,7 +48058,6 @@ payload:
   - '+.shfq.com'
   - '+.shfrp.com'
   - '+.shftth.com'
-  - '+.shgaaz.com'
   - '+.shgao.com'
   - '+.shgaoxin.net'
   - '+.shgci.com'
@@ -48428,6 +48421,7 @@ payload:
   - '+.shrenq.com'
   - '+.shrenqi.com'
   - '+.shrobotpark.com'
+  - '+.shryjc.com'
   - '+.shsaic.net'
   - '+.shsbnu.net'
   - '+.shsby.com'
@@ -48770,7 +48764,6 @@ payload:
   - '+.sidatz.com'
   - '+.siddim.com'
   - '+.sidfate.com'
-  - '+.siecc.org'
   - '+.sieredu.com'
   - '+.sifalu.com'
   - '+.sifangguo.com'
@@ -49718,7 +49711,6 @@ payload:
   - '+.sotwm.com'
   - '+.sou-yun.com'
   - '+.souaiche.com'
-  - '+.souaus.com'
   - '+.soubct.com'
   - '+.soucai.com'
   - '+.souche-fin.com'
@@ -49797,7 +49789,6 @@ payload:
   - '+.souxue8.com'
   - '+.souxuexiao.com'
   - '+.souya.com'
-  - '+.souyi.cc'
   - '+.souyidai.com'
   - '+.souyue.mobi'
   - '+.souyunku.com'
@@ -51078,7 +51069,6 @@ payload:
   - '+.szvca.com'
   - '+.szvft.com'
   - '+.szvi-bo.com'
-  - '+.szwanlitong.com'
   - '+.szwb.com'
   - '+.szwblm.com'
   - '+.szwego.com'
@@ -51335,7 +51325,6 @@ payload:
   - '+.tangzhuan666.com'
   - '+.tanhaibo.net'
   - '+.tanho.com'
-  - '+.tanhu.net'
   - '+.tankeai.com'
   - '+.tankmm.com'
   - '+.tankywoo.com'
@@ -51473,6 +51462,7 @@ payload:
   - '+.taosj.com'
   - '+.taotao.com'
   - '+.taotaocar.com'
+  - '+.taotaoxz.com'
   - '+.taotieren.com'
   - '+.taotiwang.com'
   - '+.taotu8.net'
@@ -51857,6 +51847,7 @@ payload:
   - '+.testip.xyz'
   - '+.testiu.com'
   - '+.testjj.com'
+  - '+.testlrq.com'
   - '+.testroad.org'
   - '+.testrust.com'
   - '+.testtao.com'
@@ -52411,6 +52402,7 @@ payload:
   - '+.tjst.net'
   - '+.tjstats.com'
   - '+.tjtdhyfs.com'
+  - '+.tjtele.com'
   - '+.tjtzkj.com'
   - '+.tjufbase.com'
   - '+.tjupdi.com'
@@ -52655,7 +52647,6 @@ payload:
   - '+.tongyou188.com'
   - '+.tongyuanos.com'
   - '+.tongyue.com'
-  - '+.tongyulala.org'
   - '+.tongzhuo100.com'
   - '+.tonitech.com'
   - '+.tonnn.com'
@@ -53267,6 +53258,7 @@ payload:
   - '+.tuifrog.com'
   - '+.tuiguangdns.com'
   - '+.tuiguangpingtai.com'
+  - '+.tuijianxin.com'
   - '+.tuijie.cc'
   - '+.tuikemima.com'
   - '+.tuikemohe.com'
@@ -54585,7 +54577,6 @@ payload:
   - '+.verisyno.com'
   - '+.veritrans-link.com'
   - '+.verodillan.com'
-  - '+.versaloon.com'
   - '+.vertuonline.com'
   - '+.ververica.com'
   - '+.veryapex.com'
@@ -54839,6 +54830,7 @@ payload:
   - '+.vjshi.com'
   - '+.vjudge.net'
   - '+.vk6.me'
+  - '+.vk8.co'
   - '+.vkaijiang.com'
   - '+.vkehu.com'
   - '+.vkelai.com'
@@ -57953,6 +57945,7 @@ payload:
   - '+.xagxz.com'
   - '+.xahhp.com'
   - '+.xahrly.com'
+  - '+.xahuapu.net'
   - '+.xahunter.com'
   - '+.xaidc.com'
   - '+.xaifin.com'
@@ -57989,7 +57982,6 @@ payload:
   - '+.xashangwang.com'
   - '+.xasimonds.com'
   - '+.xasixiongdi.com'
-  - '+.xaskm.com'
   - '+.xasqw.com'
   - '+.xasrc.com'
   - '+.xaszjf.com'
@@ -58445,7 +58437,6 @@ payload:
   - '+.xiangpi.com'
   - '+.xiangqianpos.com'
   - '+.xiangqin7.com'
-  - '+.xiangqinplus.com'
   - '+.xiangqiushi.com'
   - '+.xiangqu.com'
   - '+.xiangrikui.co'
@@ -58594,7 +58585,6 @@ payload:
   - '+.xiaogushi.com'
   - '+.xiaoh.me'
   - '+.xiaohansong.com'
-  - '+.xiaohb.com'
   - '+.xiaohe-jiankang.com'
   - '+.xiaohe666.com'
   - '+.xiaohei.com'
@@ -59543,6 +59533,7 @@ payload:
   - '+.xjyqly.com'
   - '+.xjytjt.com'
   - '+.xjzdjx.com'
+  - '+.xjzhongwu.com'
   - '+.xjzkzx.com'
   - '+.xjzlyy.com'
   - '+.xjzsks.com'
@@ -61755,7 +61746,6 @@ payload:
   - '+.yjs-cdn10.com'
   - '+.yjs111.com'
   - '+.yjscloud.com'
-  - '+.yjsjl.org'
   - '+.yjwlo.com'
   - '+.yjwujian.com'
   - '+.yjxsoft.com'
@@ -62102,6 +62092,7 @@ payload:
   - '+.youcash.com'
   - '+.youcha.net'
   - '+.youchedi.com'
+  - '+.youchejiuxing.com'
   - '+.youchent.com'
   - '+.youcheyihou.com'
   - '+.youchuhuodong.com'
@@ -62522,6 +62513,7 @@ payload:
   - '+.yshyqxx.com'
   - '+.ysicing.me'
   - '+.ysicing.net'
+  - '+.ysidcz.com'
   - '+.ysiis.com'
   - '+.ysjf.com'
   - '+.ysjgames.com'
@@ -64233,7 +64225,6 @@ payload:
   - '+.zhenbi.com'
   - '+.zhenbizi.com'
   - '+.zhending-chicken.com'
-  - '+.zhenfang.me'
   - '+.zhenfund.com'
   - '+.zheng800.com'
   - '+.zhengcaimall.com'
@@ -64502,6 +64493,7 @@ payload:
   - '+.zhitui.com'
   - '+.zhiweidata.com'
   - '+.zhiweilaijiaoyu.com'
+  - '+.zhiweisoft.com'
   - '+.zhiwo.com'
   - '+.zhiwuwang.com'
   - '+.zhixiaohuoke.com'
@@ -64559,6 +64551,7 @@ payload:
   - '+.zhizuoh5.com'
   - '+.zhizuotu.com'
   - '+.zhj9.com'
+  - '+.zhjedu.com'
   - '+.zhjiameng.com'
   - '+.zhjj.org'
   - '+.zhjncb.com'
@@ -64590,7 +64583,6 @@ payload:
   - '+.zhongbingtongxin.com'
   - '+.zhongbowenwu.com'
   - '+.zhongboxinwen.com'
-  - '+.zhongchaoyinshua.com'
   - '+.zhongchebaolian.com'
   - '+.zhongchoujia.com'
   - '+.zhongchouke.com'
@@ -65152,6 +65144,7 @@ payload:
   - '+.ziyun.com'
   - '+.ziyuyx.com'
   - '+.zizaike.com'
+  - '+.zizhengfang.com'
   - '+.zizhuauto.com'
   - '+.zizhupark.com'
   - '+.zizisi.com'
@@ -65899,6 +65892,7 @@ payload:
   - '+.zuojiawang.com'
   - '+.zuojing.com'
   - '+.zuojj.com'
+  - '+.zuolinyouli.vip'
   - '+.zuopinj.com'
   - '+.zuoqu.com'
   - '+.zuoqudashi.net'
