--- a/.github/workflows/clash-rule.yml
+++ b/.github/workflows/clash-rule.yml
@@ -32,6 +32,7 @@ jobs:
         echo "payload:" > ./Clash-CNIP.yaml
         sed  "s/^/  - '&/g"  ./CN.txt >> ./Clash-CNIP-tmp.yaml
         sed  "s/$/'&/g" ./Clash-CNIP-tmp.yaml >> ./Clash-CNIP.yaml
+        
         wget https://raw.githubusercontent.com/felixonmars/dnsmasq-china-list/master/accelerated-domains.china.conf
         wget https://raw.githubusercontent.com/felixonmars/dnsmasq-china-list/master/apple.china.conf
         wget https://raw.githubusercontent.com/felixonmars/dnsmasq-china-list/master/google.china.conf
@@ -53,12 +54,12 @@ jobs:
     - name: Run AdguardChinaList
       run: |
         cat chinadomain.txt > adguardtmp.txt
-        cat appletmp.txt >> adguardtmp.txt
+        ## cat appletmp.txt >> adguardtmp.txt
         ## cat googletmp.txt >> adguardtmp.txt
-        cat adguardtmp.txt | tr "\n" "/" | sed -e 's|^|/|' -e 's|\(.*\)|[\1]127.0.0.1:55555|' > accelerated-domains.china.adguardhome.conf
+        cat adguardtmp.txt | tr "\n" "/" | sed -e 's|^|/|' -e 's|\(.*\)|[\1]192.168.1.22|' > accelerated-domains.china.adguardhome.conf
         echo "" >> accelerated-domains.china.adguardhome.conf
         echo "https://1.1.1.1/dns-query" >> accelerated-domains.china.adguardhome.conf
-        echo "https://8.8.8.8/dns-query" >> accelerated-domains.china.adguardhome.conf
+        #echo "https://8.8.8.8/dns-query" >> accelerated-domains.china.adguardhome.conf
         echo "https://208.67.222.222/dns-query" >> accelerated-domains.china.adguardhome.conf
 
         
