--- a/directbak.yaml
+++ b/directbak.yaml
@@ -688,6 +688,7 @@ payload:
   - '+.0rl.cc'
   - '+.0s8s.com'
   - '+.0sm.com'
+  - '+.0u0.ltd'
   - '+.0x0.biz'
   - '+.0x0.ooo'
   - '+.0x100.club'
@@ -2889,6 +2890,7 @@ payload:
   - '+.35mei.com'
   - '+.35nic.com'
   - '+.35pic.com'
+  - '+.35pn.com'
   - '+.35q.com'
   - '+.35rc.com'
   - '+.35zww.com'
@@ -3467,7 +3469,6 @@ payload:
   - '+.4006906600.com'
   - '+.4007108885.net'
   - '+.4007112366.com'
-  - '+.4007hao.com'
   - '+.4008000000.com'
   - '+.4008005216.com'
   - '+.4008060066.com'
@@ -5105,6 +5106,7 @@ payload:
   - '+.5etv.com'
   - '+.5ewin.com'
   - '+.5fen.com'
+  - '+.5fou.com'
   - '+.5fun.com'
   - '+.5fwan.com'
   - '+.5gcg.com'
@@ -5306,7 +5308,6 @@ payload:
   - '+.60tui.com'
   - '+.60wr.com'
   - '+.61.com'
-  - '+.61.life'
   - '+.610115.com'
   - '+.610213.net'
   - '+.612.com'
@@ -11907,6 +11908,7 @@ payload:
   - '+.boluogouwu.com'
   - '+.boluomee.com'
   - '+.boluomeet.com'
+  - '+.boluoyun.com'
   - '+.boluoyunyu.com'
   - '+.bom.ai'
   - '+.bom2buy.com'
@@ -12984,7 +12986,6 @@ payload:
   - '+.cburi.com'
   - '+.cbvac.com'
   - '+.cbw111.com'
-  - '+.cbxdxg.com'
   - '+.cbxsw.com'
   - '+.cby.me'
   - '+.cc-1.com'
@@ -19290,6 +19291,7 @@ payload:
   - '+.dnswhk.com'
   - '+.dnswind.net'
   - '+.dnsx365.com'
+  - '+.dnsyy.net'
   - '+.dnszh.com'
   - '+.dnxp.net'
   - '+.dnxtc.net'
@@ -23958,7 +23960,6 @@ payload:
   - '+.geeku.net'
   - '+.geekwom.com'
   - '+.geekxue.com'
-  - '+.geekzu.org'
   - '+.geely.com'
   - '+.geement.com'
   - '+.geeqee.com'
@@ -26772,6 +26773,7 @@ payload:
   - '+.heijiao.net'
   - '+.heijiazi.com'
   - '+.heijin.org'
+  - '+.heijingjihua.com'
   - '+.heikexs.com'
   - '+.heilanhome.com'
   - '+.heilaot.com'
@@ -27918,6 +27920,7 @@ payload:
   - '+.howbuy.com'
   - '+.howelllighting.com'
   - '+.howjoin.com'
+  - '+.hownav.com'
   - '+.howsci.com'
   - '+.howsoftworks.net'
   - '+.howtoing.com'
@@ -30275,6 +30278,7 @@ payload:
   - '+.imgsha.com'
   - '+.imgshangman.com'
   - '+.imgsina.com'
+  - '+.imgtg.com'
   - '+.imgtu.com'
   - '+.imgu.cc'
   - '+.imgurl.org'
@@ -31455,7 +31459,6 @@ payload:
   - '+.jbedu.org'
   - '+.jbelf.com'
   - '+.jbfoundry.com'
-  - '+.jbhdq.com'
   - '+.jbpbox.com'
   - '+.jbqipa.com'
   - '+.jbryun.com'
@@ -31484,7 +31487,6 @@ payload:
   - '+.jchl.com'
   - '+.jchla.com'
   - '+.jchxmc.com'
-  - '+.jcjpt.com'
   - '+.jcku.com'
   - '+.jcloud-cache.com'
   - '+.jcloud-cdn.com'
@@ -33351,7 +33353,6 @@ payload:
   - '+.jufengshang.com'
   - '+.jufidc.com'
   - '+.jufoinfo.com'
-  - '+.jufxf.com'
   - '+.juhaof.com'
   - '+.juhaokan.org'
   - '+.juhe.com'
@@ -33796,7 +33797,6 @@ payload:
   - '+.jztvxmt.com'
   - '+.jztylxx.com'
   - '+.jztzw.net'
-  - '+.jzwcom.com'
   - '+.jzxs.com'
   - '+.jzxue.com'
   - '+.jzyx.com'
@@ -34501,7 +34501,6 @@ payload:
   - '+.kiwisec.com'
   - '+.kj-hospital.com'
   - '+.kj-pcb.com'
-  - '+.kj1555.com'
   - '+.kj1d.com'
   - '+.kj3.com'
   - '+.kj5544.com'
@@ -35265,7 +35264,6 @@ payload:
   - '+.kxwan.com'
   - '+.kxxsc.com'
   - '+.kxxxl.com'
-  - '+.kxyike.com'
   - '+.kxzmw.com'
   - '+.ky-express.com'
   - '+.ky5yx.com'
@@ -38040,7 +38038,6 @@ payload:
   - '+.macosgame.com'
   - '+.macoshome.com'
   - '+.macpeers.com'
-  - '+.macrocheng.com'
   - '+.macrosan.com'
   - '+.macrosilicon.com'
   - '+.macrounion.com'
@@ -38285,6 +38282,7 @@ payload:
   - '+.mangege.com'
   - '+.mangg.com'
   - '+.mangg.net'
+  - '+.manggo.fun'
   - '+.mangguo.com'
   - '+.mangguo.org'
   - '+.mangguo168.com'
@@ -38383,6 +38381,7 @@ payload:
   - '+.maotuying.com'
   - '+.maowow.com'
   - '+.maoxinhang.com'
+  - '+.maoyachen.com'
   - '+.maoyan.com'
   - '+.maoyi.biz'
   - '+.maoyia.com'
@@ -39907,7 +39906,6 @@ payload:
   - '+.moonlian.com'
   - '+.moonsec.com'
   - '+.moontc.com'
-  - '+.moonx.ai'
   - '+.moooc.cc'
   - '+.mooooc.com'
   - '+.moootooo.com'
@@ -46201,6 +46199,7 @@ payload:
   - '+.rizhi.xyz'
   - '+.rizhiyi.com'
   - '+.rizhuji.com'
+  - '+.rizhuti.com'
   - '+.rj-bai.com'
   - '+.rj889.net'
   - '+.rjchangan.com'
@@ -46314,6 +46313,7 @@ payload:
   - '+.rongji.com'
   - '+.rongledz.com'
   - '+.ronglianmeng.net'
+  - '+.rongmei.net'
   - '+.rongnav.com'
   - '+.rongroad.com'
   - '+.rongshiedu.com'
@@ -54277,6 +54277,7 @@ payload:
   - '+.uugai.com'
   - '+.uugame.com'
   - '+.uugtv.com'
+  - '+.uuh5.com'
   - '+.uuhall.com'
   - '+.uuhimalayanqm.com'
   - '+.uuhy.com'
@@ -56848,7 +56849,6 @@ payload:
   - '+.wjin.cc'
   - '+.wjinmiao.com'
   - '+.wjjfjt.com'
-  - '+.wjkwl.com'
   - '+.wjlkj.com'
   - '+.wjlxmedia.com'
   - '+.wjrcb.com'
@@ -60119,7 +60119,6 @@ payload:
   - '+.xunbibao.com'
   - '+.xunbin.com'
   - '+.xunbuy.com'
-  - '+.xuncaoji.net'
   - '+.xunchabing.com'
   - '+.xundalm.com'
   - '+.xundayun.com'
@@ -61242,7 +61241,6 @@ payload:
   - '+.yigxz.com'
   - '+.yihafo.com'
   - '+.yihaikerry.net'
-  - '+.yihangen.com'
   - '+.yihao01.com'
   - '+.yihaodian.com'
   - '+.yihaodianimg.com'
@@ -63033,7 +63031,6 @@ payload:
   - '+.yuntu.io'
   - '+.yunvm.com'
   - '+.yunvs.com'
-  - '+.yunwangke.com'
   - '+.yunwei8.com'
   - '+.yunweibang.com'
   - '+.yunweipai.com'
@@ -64874,6 +64871,7 @@ payload:
   - '+.zhulogic.com'
   - '+.zhulong.com'
   - '+.zhulu86.com'
+  - '+.zhume.com'
   - '+.zhumengwl.com'
   - '+.zhumu.me'
   - '+.zhuna.net'
